# theraplushie

./: .editorconfig  .gitignore  README.md  generateResponse.py  promptGeneration.txt  pyproject.toml
brain/: pyproject.toml
source/: config.txt
src/core/src/core/: cli.py  generateResponse.py  main.py  speakToPlushie.py
src/microphone/: pyproject.toml
src/microphone/src/microphone/: cli.py  recorder.py  remote.py
src/speaker/: pyproject.toml
src/speaker/src/speaker/: cli.py
src/voice/: generateResponse.py  pyproject.toml
src/voice/src/voice/: cli.py
tests/: main.py  speakToPlushie.py
